# bookmarks

./: .dockerignore  .gitignore  Dockerfile  cert.crt  cert.key  docker-compose.yml  pyproject.toml  requirements.txt
Dockerfiles/: django.Dockerfile
account/: forms.py  models.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_contact_contact_account_con_created_8bdae6_idx.py  0003_rename_user_form_contact_user_from.py
account/templates/: base.html
account/templates/account/: dashboard.html  register_done.html
account/templates/registration/: logged_out.html  login.html  password_change_done.html  password_reset_confirm.html  password_reset_done.html
actions/: apps.py  models.py  utils.py
actions/migrations/: 0001_initial.py  0002_rename_actions_action_rename_verd_action_verb_and_more.py
app/: manage.py  pyproject.toml
app/account/: admin.py  apps.py  authentication.py  forms.py  urls.py
app/account/migrations/: 0002_contact_contact_account_con_created_8bdae6_idx.py  0003_rename_user_form_contact_user_from.py
app/account/templates/: base.html
app/account/templates/account/: edit.html  login.html
app/account/templates/account/user/: list.html
app/account/templates/registration/: login.html  password_reset_form.html
app/actions/: admin.py  models.py
app/actions/migrations/: 0001_initial.py
app/bookmarks/: asgi.py  settings.py  wsgi.py
app/images/: admin.py  apps.py  forms.py  signals.py  urls.py
app/images/migrations/: 0001_initial.py  0002_rename_user_like_image_users_like.py
app/scripts/: run_server.sh
bookmarks/: settings.py  urls.py
images/: apps.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
images/migrations/: 0001_initial.py  0002_rename_user_like_image_users_like.py  0003_image_total_likes_and_more.py
images/templates/images/image/: detail.html  list.html
pypoetry/artifacts/29/19/ed/1f6739f4957b2f4292b18d40006bcf67785f8b020d9525ea65a1839457/: flake8_quotes-3.3.2-py3-none-any.whl
pypoetry/artifacts/48/2c/07/69d9ea3f447fbe01799802753e434548d465c6f3968f23bf5ad9ad1afe/: pytest_black-0.3.12-py3-none-any.whl
scripts/: run_server.sh
scripts/django/: run_service.sh
terraform/: .tfvar  00_tf_backend.tf  08_ecs.tf  variables.tf
terraform/templates/: django_app.json.tpl
(+2 files in other folders)
